// It is advised to not edit this file directly, in order to update script easily.
// Instead, edit gradle/scripts/extra.gradle to customize the build.
import org.jetbrains.gradle.ext.Gradle

plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.4.1'
    id 'xyz.wagyourtail.unimined' version '1.4.25-kappa'
    id 'net.kyori.blossom' version '2.2.0'
    id 'com.gradleup.shadow' version '9.4.2' apply false
}

apply from: 'gradle/scripts/helpers.gradle'

if (propertyBool('enable_shadow')) {
    apply plugin: 'com.gradleup.shadow'
}

// Early Assertions
assertProperty 'root_package'
assertProperty 'mod_id'
assertProperty 'mod_package'
assertProperty 'mod_name'

assertSubProperties 'use_access_transformer', 'access_transformer_locations'
assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'

setDefaultProperty 'generate_sources_jar', true, false
setDefaultProperty 'generate_javadocs_jar', true, false
setDefaultProperty 'enable_shadow', false, false
setDefaultProperty 'minecraft_username', true, 'Dev'
setDefaultProperty 'extra_jvm_args', false, ''

group = propertyString('root_package')

base {
    archivesName = propertyString('mod_id')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    if (propertyBool('generate_sources_jar')) {
        withSourcesJar()
    }
    if (propertyBool('generate_javadocs_jar')) {
        withJavadocJar()
    }
}

configurations {
    contain
    implementation.extendsFrom(contain)
    modCompileOnly
    compileOnly.extendsFrom(modCompileOnly)
    modRuntimeOnly
    runtimeOnly.extendsFrom(modRuntimeOnly)
    if (propertyBool('enable_shadow')) {
        shaded
        implementation.extendsFrom(shaded)
    }
}

String remapTaskName = propertyBool('enable_shadow') ? "remapShadowJar" : "remapJar"

//noinspection GroovyAssignabilityCheck
unimined.minecraft {
    version "1.12.2"

    mappings {
        mcp("stable", "39-1.12")
    }

    cleanroom {
        if (propertyBool('use_access_transformer')) {
            accessTransformer "${rootProject.projectDir}/src/main/resources/${propertyString('access_transformer_locations')}"
        }
        loader "0.5.15-alpha"
        runs.all {
            systemProperty("crl.dev.mixin", "${mod_id}.default.mixins.json,${mod_id}.optional.mixins.json")
            args += ['--username', minecraft_username]
            def extraArgs = propertyString('extra_jvm_args')
            if (extraArgs != null && !extraArgs.trim().isEmpty()) {
                jvmArgs += extraArgs.split { "\\s+" }.toList()
            }
            if (propertyBool('enable_foundation_debug')) {
                systemProperty("foundation.dump", "true")
                systemProperty("foundation.verbose", "true")
            }
            if (propertyBool('is_coremod')) {
                systemProperty("fml.coreMods.load", propertyString('coremod_plugin_class_name'))
            }
            return
        }
    }

    defaultRemapJar = false

    if (sourceSet == sourceSets.main) {
        String jarTaskName = propertyBool('enable_shadow') ? "shadowJar" : "jar"

        remap(tasks.named(jarTaskName).get()) {
            mixinRemap {
                enableBaseMixin()
                enableMixinExtra()
            }
        }
    }

    mods {
        remap(configurations.modCompileOnly)
        remap(configurations.modRuntimeOnly)
    }
}

apply from: 'gradle/scripts/dependencies.gradle'

processResources {
    rename '(.+_at.cfg)', 'META-INF/$1'
}

sourceSets {
    main {
        blossom {
            javaSources {
                property('mod_id', propertyString('mod_id'))
                property('mod_name', propertyString('mod_name'))
                property('mod_version', propertyString('mod_version'))
                property('package', "${mod_package}.internal")
            }
            resources {
                property('mod_id', propertyString('mod_id'))
                property('mod_name', propertyString('mod_name'))
                property('mod_version', propertyString('mod_version'))
                property('mod_description', propertyString('mod_description'))
                property('mod_authors', propertyStringList('mod_authors', ',').collect {it.strip()}.join('", "'))
                property('mod_credits', propertyString('mod_credits'))
                property('mod_license', propertyString('mod_license'))
                property('mod_url', propertyString('mod_url'))
                property('mod_issue_tracker_url', propertyString('mod_issue_tracker_url'))
                property('mod_update_json', propertyString('mod_update_json'))
                property('mod_icon_item', propertyString('mod_icon_item'))
                property('mod_logo_path', propertyString('mod_logo_path'))
                property('mod_icon_path', propertyString('mod_icon_path'))
                property('mod_background_path', propertyString('mod_background_path'))
            }
        }
    }
    test {
        compileClasspath += sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
    }
}

compileJava {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

jar {
    archiveClassifier = 'dev'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    if (configurations.contain.size() > 0) {
        into('/') {
            from configurations.contain
        }
    }
    doFirst {
        manifest {
            def attribute_map = [:]
            attribute_map['ModType'] = "CRL"
            attribute_map['MixinConfigs'] = "${mod_id}.default.mixins.json,${mod_id}.optional.mixins.json"
            if (configurations.contain.size() > 0) {
                attribute_map['ContainedDeps'] = configurations.contain.collect { it.name }.join(' ')
                attribute_map['NonModDeps'] = true
            }
            if (propertyBool('is_coremod')) {
                attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
                if (propertyBool('coremod_includes_mod')) {
                    attribute_map['FMLCorePluginContainsFMLMod'] = true
                }
            }
            if (propertyBool('use_access_transformer')) {
                attribute_map['FMLAT'] = propertyString('access_transformer_locations')
            }
            attributes(attribute_map)
        }
    }
    finalizedBy(tasks.named(remapTaskName).get())
}

if (propertyBool('enable_shadow')) {
    // Shade deps to the dev jar, so the normal dev jar will contain deps
    shadowJar {
        archiveClassifier = 'dev'
        //noinspection GroovyAssignabilityCheck,GroovyAccessibility
        configurations = [ project.configurations.shaded ]
    }
    // Unshaded dev jar get 'plain' as name
    tasks.named("jar").configure {
        finalizedBy shadowJar
        archiveClassifier = "plain"
    }
}

tasks.named(remapTaskName).configure {
    doFirst {
        logging.captureStandardOutput LogLevel.INFO
    }
    doLast {
        logging.captureStandardOutput LogLevel.QUIET
    }
}

idea {
    module {
        inheritOutputDirs = true
    }
    project {
        settings {
            runConfigurations {
                "0. Gen Sources"(Gradle) {
                    taskNames = ["genSources"]
                }
                "1. Run Client"(Gradle) {
                    taskNames = ["testmodRunClient"]
                }
                "2. Run Server"(Gradle) {
                    taskNames = ["testmodRunServer"]
                }
                "3. Build Mod"(Gradle) {
                    taskNames = ["build"]
                }
            }
            compiler.javac {
                afterEvaluate {
                    javacAdditionalOptions = "-encoding utf8"
                    moduleJavacAdditionalOptions = [
                            (project.name + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')
                    ]
                }
            }
        }
    }
}

compileTestJava {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()
    javaLauncher.set(javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    })
    workingDir = rootProject.file('run')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

apply from: 'gradle/scripts/publishing.gradle'
apply from: 'gradle/scripts/extra.gradle'
